@@ -1,9 +1,9 @@
 package com.robertx22.age_of_exile.database.data.spells.components.actions;
 
-import com.robertx22.age_of_exile.database.data.spells.spell_classes.SpellModEnum;
 import com.robertx22.age_of_exile.database.data.spells.components.MapHolder;
 import com.robertx22.age_of_exile.database.data.spells.components.tooltips.ICTextTooltip;
 import com.robertx22.age_of_exile.database.data.spells.spell_classes.SpellCtx;
+import com.robertx22.age_of_exile.database.data.spells.spell_classes.SpellModEnum;
 import com.robertx22.age_of_exile.saveclasses.gearitem.gear_bases.TooltipInfo;
 import com.robertx22.age_of_exile.saveclasses.spells.calc.ValueCalculationData;
 import com.robertx22.age_of_exile.saveclasses.unit.ResourcesData;
@@ -30,7 +30,7 @@ public class RestoreHealthAction extends SpellAction implements ICTextTooltip {
 
         ValueCalculationData calc = data.get(VALUE_CALCULATION);
 
-        text.append("Restores ")
+        text.append("Restore ")
             .append(calc.getShortTooltip(info.unitdata))
             .append(" Health");
 
