@@ -47,11 +47,11 @@ E,,,,,,,,,,,,,,,,,,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,,mana_regen,O,mana,O,mana_regen,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,O,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,int,,,,,,str,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,,,O,,,thunder_storm_mana_cost,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,,,int,,,O,,,str,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,O,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,int,,,,,,str,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,O,,O,O,thunder_storm,O,O,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,O,,,,,O,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,int,,,thunder_storm_cooldown,O,thunder_storm_mana_cost,O,thunder_storm_cooldown,,,str,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,O,,,,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,int,,,,,,,,,,str,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,O,,,,,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,,O,,,spell_thunder_damage,,,,spell_thunder_damage,,,O,,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E,E
 ,,,,,,,,,,,,,,,,,,int,,,,O,,O,,,,str,,,,,,,,,,,,,,,,,,,,,,,,,,,
