@@ -23,3 +23,4 @@ But it probably means short term bugs.
 - datapack validation now runs after all datapacks are loaded, instead of on server start, this means invalid entries will no longer be shown on client
 - "any weapon" spell cast requirement now allows any item to cast the spell. Including non age of exile weapons
 - added remove negative potion effect spell action
+- fix "target has effect" condition. 
